@@ -11,7 +11,7 @@ function _advanced_forum_preprocess_forum_list(&$variables) {
   // Add needed items for the collapsible containers.
   $collapsible = variable_get('advanced_forum_collapsible_containers', 'toggle');
   $variables['collapsible'] = FALSE;
-  if ($collapsible != 'disable') {
+  if ($collapsible != 'none') {
     drupal_add_library('system', 'jquery.cookie');
     drupal_add_js(drupal_get_path('module', 'advanced_forum') . '/js/advanced_forum.js');
     $settings['advanced_forum'] = array('modulePath' => drupal_get_path('module', 'advanced_forum'), 'effect' => $collapsible);
