@@ -2,6 +2,11 @@
 
 ****************************** DRUPAL 7 - 2.x BRANCH ********************************
 
+March 07, 2011
+--------------
+#291084 by Michelle: Moved collapsible containers option to correct fieldset.
+#291084 by troky: More JavaScript code cleanup.
+
 March 05, 2011
 --------------
 #720118 by Michelle, troky: Redid forum listing page to handle subcontainers and forums better. This required CSS changes that led to more changes and so there's more here than is strictly related to the issue including re-parenting Blue Lagoon to Naked.
@@ -16,7 +21,7 @@ February 11, 2011
 
 February 10, 2011
 -----------------
-NOISSUE by troky: Added slide effect to collapsible containters. JavaScript code cleanup.
+#291084 by troky: Added slide effect to collapsible containters. JavaScript code cleanup.
 
 February 06, 2011
 -----------------
